--- a/EasyRentCar/Web.config
+++ b/EasyRentCar/Web.config
@@ -11,8 +11,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.8"/>
-    <httpRuntime targetFramework="4.8"/>
+    <customErrors mode="On" defaultRedirect="/Shared/Error.cshtml">
+      <error statusCode="404" redirect="/Error/NotFound"/>
+    </customErrors>
+    <compilation debug="true" targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Security/Login"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
