Updated CarController and created CarForm page.
Added Create Update Delete methods for Cars.

Co-Authored-By: uygargun <72603670+uygargun@users.noreply.github.com>

--- a/EasyRentCar/EasyRentCar.csproj
+++ b/EasyRentCar/EasyRentCar.csproj
@@ -181,6 +181,7 @@
     <Content Include="Views\Car\Details.cshtml" />
     <Content Include="Views\Security\Login.cshtml" />
     <Content Include="Views\Security\Register.cshtml" />
+    <Content Include="Views\Car\CarForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
