--- a/EasyRentCar/Web.config
+++ b/EasyRentCar/Web.config
@@ -13,14 +13,12 @@
     <add key="AWSSecretKey" value="Sp/blyzlpkGRGjKlnuwkaF0ekCdEMtkS5OlNjwA9" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="/Shared/Error.cshtml">
+    <customErrors mode="Off" defaultRedirect="/Shared/Error.cshtml">
       <error statusCode="404" redirect="/Error/NotFound"/>
     </customErrors>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
-    <authentication mode="Forms">
-      <forms loginUrl="/Security/Login"></forms>
-    </authentication>
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
