--- a/EasyRentCar/Web.config
+++ b/EasyRentCar/Web.config
@@ -18,7 +18,9 @@
     </customErrors>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
-
+    <authentication mode="Forms">
+      <forms loginUrl="/Security/Login"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
