Modified tests for CarController. Added new tests for HomeController.

--- a/EasyRentCar.Tests/packages.config
+++ b/EasyRentCar.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.CodeCoverage" version="17.8.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Moq" version="4.20.70" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="3.1.1" targetFramework="net48" />
