--- a/EasyRentCar/Web.config
+++ b/EasyRentCar/Web.config
@@ -15,8 +15,10 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="AWSAccessKey" value="AKIAZF6ALVUCCKUGSEM7"/>
+	<!--
+	<add key="AWSAccessKey" value="AKIAZF6ALVUCCKUGSEM7"/>
     <add key="AWSSecretKey" value="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"/>
+	-->
   </appSettings>
   <system.web>
     <customErrors mode="On" defaultRedirect="/Shared/Error.cshtml">
@@ -54,9 +56,11 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-<connectionStrings><add name="carDBEntities"
-connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cars-db.cx0a8secoxdm.eu-north-1.rds.amazonaws.com;initial catalog=carDB;user id=admin;password=SQLsqlSQLsql;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-providerName="System.Data.EntityClient"/></connectionStrings>
+<connectionStrings>
+	<!--<add name="carDBEntities" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cars-db.cx0a8secoxdm.eu-north-1.rds.amazonaws.com;initial catalog=carDB;user id=admin;password=SQLsqlSQLsql;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+providerName="System.Data.EntityClient"/>-->
+	<add name="carDBEntities" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-GAHQC0M\SQLEXPRESS;initial catalog=CarsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
 <entityFramework>
 <providers>
 <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
