--- a/EasyRentCar/packages.config
+++ b/EasyRentCar/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.CodeCoverage" version="17.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.6.2" targetFramework="net48" />
