--- a/EasyRentCar.Tests/packages.config
+++ b/EasyRentCar.Tests/packages.config
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net48" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
+  <package id="Moq" version="4.20.70" targetFramework="net48" />
+  <package id="MSTest.TestAdapter" version="3.1.1" targetFramework="net48" />
+  <package id="MSTest.TestFramework" version="3.1.1" targetFramework="net48" />
+  <package id="NUnit" version="4.0.1" targetFramework="net48" />
+  <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
